Version 0.6
    o when converting to R objects, variables are automatically coerced
      to declared labelled objects (see package declared for details)
    o updated code to the latest version of package haven, and
      (consequently) removed argument "binpath" from function convert()
    o new function recodeMissing()
    o new function collectMetadata()
    
Version 0.5
    o fixed bug in make_labelled() when a variable is character,
      yet the value labels and the defined missing values are numeric
    o various other improvements to internal functions
    
Version 0.4
    o improved function convert() for speed
    o sync-ed with the latest version of package admisc
    
Version 0.3
    o new function convert(), to convert from one statistical package to another
    o new function exportDDI(), for DDI codebook version 2.5
    o new function getMetadata(), to extract metadata information from statistical package
      files (such as SPSS or Stata)
    o replaced package XML with package xml2 (thanks to Ruben Arslan for the suggestion)
    o changed the design of the R setup file, employing labelled variables
    o R package haven is now used to deal with missing values and missing ranges
    o removed formal arguments "delim", "miss", "trymiss", "uniqueid" and "SD" from function
      setupfile()
    o improved code for the SAS setup files
    o various bug fixes in function setupfile()
    
Version 0.2
    o better arrangement of missing types in the R commands
    o some improvements in the R code generation
    o improved SAS setup file (thanks to Alexandre Kych)
    o the package now reads both ".csv" and ".csv.gz" files
    o new internal function getDelimiter() to try identifying the .csv column separator
    o fixed a small bug preventing the identification and formatting of string variables
      in SPSS
    o fixed a bug dealing with missing values for SPSS setup files

Version 0.1